[package]
name = "osdev"
version = "0.1.0"
edition = "2021"
authors = ["Lasse Eskildsen lasse.e@hey.com"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }
bootloader = "0.9.8"